--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "bulma": "^0.9.4",
     "chart.js": "^4.4.0",
     "ng2-charts": "^5.0.3",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
