--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.5",
     "nodemon": "^3.0.1"
   },
