--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@angular/cli": "~16.2.5",
     "@angular/compiler-cli": "^16.2.8",
     "@types/jasmine": "~4.3.0",
+    "@types/xlsx": "^0.0.36",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
