--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [  
+            "node_modules/jquery/dist/jquery.min.js",
+            "node_modules/datatables.net/js/jquery.dataTables.js"]
           },
           "configurations": {
             "production": {
