--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
     "chart.js": "^4.4.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "datatables.net": "^1.13.8",
+    "datatables.net-buttons": "^2.4.2",
+    "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^5.0.3",
     "ngx-toastr": "^17.0.2",
