--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,16 @@
     "@angular/platform-browser": "^16.2.8",
     "@angular/platform-browser-dynamic": "^16.2.8",
     "@angular/router": "^16.2.8",
+    "@types/html2canvas": "^1.0.0",
     "bulma": "^0.9.4",
     "chart.js": "^4.4.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "datatables.net": "^1.13.8",
     "datatables.net-buttons": "^2.4.2",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^5.0.3",
     "ngx-toastr": "^17.0.2",
