--- a/server/package.json
+++ b/server/package.json
@@ -26,9 +26,10 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.5",
+    "@types/multer": "^1.4.11",
     "nodemon": "^3.0.1"
   },
   "description": ""
